either 5 or 6.  (Previously the length had to be 5.)  The optional 6th
element is interpreted as an `input-waiting' thunk -- i.e. a thunk
that returns the number of characters that can be read immediately
without the soft port blocking.

** New debugging feature: breakpoints.

Guile now has breakpoints.  For details see the `Debugging Features'
chapter in the reference manual.

* Changes to the C interface

** The value 'scm_mask_ints' is no longer writable.

Previously, you could set scm_mask_ints directly.  This is no longer
possible.  Use scm_c_call_with_blocked_asyncs and
scm_c_call_with_unblocked_asyncs instead.

** New functions scm_c_call_with_blocked_asyncs and
   scm_c_call_with_unblocked_asyncs

Like scm_call_with_blocked_asyncs etc. but for C functions.

** New snarfer macro SCM_DEFINE_PUBLIC.

This is like SCM_DEFINE, but also calls scm_c_export for the defined
function in the init section.

** The snarfer macro SCM_SNARF_INIT is now officially supported.

** New macros SCM_VECTOR_REF and SCM_VECTOR_SET.

Use these in preference to SCM_VELTS.

** The SCM_VELTS macros now returns a read-only vector. For writing,
use the new macros SCM_WRITABLE_VELTS or SCM_VECTOR_SET.  The use of
SCM_WRITABLE_VELTS is discouraged, though.

** Garbage collector rewrite.

The garbage collector is cleaned up a lot, and now uses lazy
sweeping. This is reflected in the output of (gc-stats); since cells
are being freed when they are allocated, the cells-allocated field
stays roughly constant.

For malloc related triggers, the behavior is changed. It uses the same
heuristic as the cell-triggered collections.  It may be tuned with the
environment variables GUILE_MIN_YIELD_MALLOC.  This is the percentage
for minimum yield of malloc related triggers. The default is 40.
GUILE_INIT_MALLOC_LIMIT sets the initial trigger for doing a GC. The
default is 200 kb.

Debugging operations for the freelist have been deprecated, along with